# minimal-opencl-gl4

./: CMakeLists.txt  build.bat  cll.h  main.cpp
